# vade-signer

./: Cargo.toml  README.md  VERSIONS.md
src/: lib.rs  signing.rs
tests/: signing.rs
