[package]
name = "vade-signer"
version = "0.0.2"
authors = ["evan GmbH"]
edition = "2018"
license-file = "LICENSE.txt"
description = "signing helper for vade plugins"
homepage = "https://github.com/evannetwork/vade-signer"
documentation = "https://docs.rs/crate/vade-signer"
repository = "https://github.com/evannetwork/vade-signer"
readme = "README.md"

[lib]
name = "vade_signer"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies]
async-trait = "0.1.31"
byteorder = { version = "1.3.4" }
hex = "0.4.2"
libsecp256k1 = "0.5.0"
log = "0.4.8"
rand = "0.7.3"
reqwest = { version = "0.11.14", default-features= false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.53", features = ["preserve_order", "raw_value"] }
sha2 = "0.8.1"
sha3 = "0.8.2"

[dev-dependencies]
tokio = { version = "=1.7.1", features = ["macros", "rt-multi-thread"] }
